[project]
name = "gra"
version = "1.0.0"
license = {text = "MIT"}
authors = [
    { name = "Martin Leitner-Ankerl", email = "martin.ankerl@gmail.com" },
]
description = "Git Repo Admin - administrate local git clones"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Linux",
]

[project.urls]
"Homepage" = "https://github.com/martinus/gra"
"Bug Tracker" = "https://github.com/martinus/gra/issues"

[project.scripts]
gra = "gra.__main__:main"
